@@ -1,3 +1,6 @@
+2012-06-06  6.7.7-7 Anthony Thyssen <A.Thyssen@griffith...>
+  * Small refactor of Average Interpolators (save some multiplies)
+
 2012-06-05  6.7.7-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-6, SVN revision 8164.
 
